Removed exces media

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../media/Worldmap\ oval.png");
+  background-image: url("../media/worldmap.png");
   background-repeat: no-repeat;
   background-size: 100%;
   margin: 0 auto;
