--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,11 @@ select {
   padding: 5px 20px;
 }
 
+.cdate,
+.ctime {
+  padding-left: 20px;
+}
+
 footer {
   color: #a0a6d5;
   font-size: 10px;
